实现打包